--- a/source/index.html
+++ b/source/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/style.css">
-  <title>Mishka</title>
+  <title>Empty page</title>
   <!--  preload-->
   <link rel="preload" href="css/style.css" as="style" crossorigin="anonymous">
   <link rel="preload" href="fonts/opensans.woff2" as="font" crossorigin="anonymous">
